Style: updated movie info page stylesheet

--- a/src/components/elements/FourColGrid/FourColGrid.css
+++ b/src/components/elements/FourColGrid/FourColGrid.css
@@ -34,7 +34,7 @@
 
 @media screen and (max-width: 720px) {
   .rmdb-grid-content {
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
   }
 
   .rmdb-grid-element:nth-child(2n+2) {
