Feat: Added search functionality

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -61,3 +61,23 @@
   -o-transition: background-color 1000ms;
   transition: background-color 1000ms;
 }
+
+/**
+*
+* SEARCH COMPONENT
+*/
+.showSearchComponentBtn {
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
+  background: rgba(33, 37, 41, 0.3);
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 50px;
+  right: 20px;
+  cursor: pointer;
+  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.50);
+}
